@@ -1,5 +1,9 @@
 2006-02-22  David Reveman  <davidr@novell.com>
 
+	* plugins/switcher.c: Add binding for selecting previous window.
+
+	* plugins/decoration.c: Remove sync hack.
+
 	* gnome/window-decorator/gnome-window-decorator.c
 	(draw_shadow_background): Fix drawing of bottom and bottom right
 	shadow rectangle.
